🎿💗 Updated with Glitch

--- a/views/index.html
+++ b/views/index.html
@@ -44,6 +44,9 @@
           <li>
             <a href="/benormal">sue</a>
           </li>
+          <li>
+            <a href="/groucho">julius</a>
+          </li>
           <!-- add a link to your endpoint here -->
           <!-- link to the endpoint name you added in server.js -->
           <!-- use any text you like as the content of the anchor element -->
