--- a/views/index.html
+++ b/views/index.html
@@ -47,6 +47,9 @@
           <li>
             <a href="/groucho">julius</a>
           </li>
+           <li>
+            <a href="/maldi">Shimau</a>
+          </li>
           <!-- add a link to your endpoint here -->
           <!-- link to the endpoint name you added in server.js -->
           <!-- use any text you like as the content of the anchor element -->
