Updated Alan's API

--- a/views/index.html
+++ b/views/index.html
@@ -50,6 +50,9 @@
            <li>
             <a href="/maldi">Shimau</a>
           </li>
+          <li>
+            <a href="/beyourself">alanveloso</a>
+          </li>
           <!-- add a link to your endpoint here -->
           <!-- link to the endpoint name you added in server.js -->
           <!-- use any text you like as the content of the anchor element -->
