🌽🍔 Updated with Glitch

--- a/views/index.html
+++ b/views/index.html
@@ -56,6 +56,9 @@
           <li>
             <a href="/mcgrealife">mcgrealife</a>
           </li>
+          <li>
+            <a href="/gorilinos">gorilinos</a>
+          </li>
           <!-- add a link to your endpoint here -->
           <!-- link to the endpoint name you added in server.js -->
           <!-- use any text you like as the content of the anchor element -->
