🎫🍢 Updated with Glitch

--- a/views/index.html
+++ b/views/index.html
@@ -45,6 +45,9 @@
             <a href="/benormal">sue</a>
           </li>
           <li>
+            <a href="/hashim">hashim</a>
+          </li>
+          <li>
             <a href="/groucho">julius</a>
           </li>
            <li>
